--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         </thead>
         <tbody id="brokersMessage"></tbody>
     </table>
-    <script src="/browserMqtt.js"></script>
+    <script src="/browser-mqtt.js"></script>
     <script src="/controller.js"></script>
 </body>
 
